[project]
name = "vllm-langchain-demo"
version = "0.1.0"
description = "vLLM + LangChain Demo Application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=0.1.0",
    "langchain-classic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[tool.uv]
# 不使用 dev-dependencies，已废弃

